Added concinnity logo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3656L7DE2H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3656L7DE2H');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +45,7 @@
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid nav-alignment">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand navbar-brand-img-full" href="#">
                     <img src="./images/DU-FULL.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -115,12 +125,12 @@
                     <div class="col-md-12 landing-text">
                         <div data-aos="fade-left">
                             <h6>NEW TRENDS</h6>
-                            <h1>COLLUSION</h1>
-                            <h6>An exclusive selection of this season's trends.</h6>
-                            <div class="landing-btn">
+                            <h1>Comming<br/> Soon</h1>
+                            <h6>An exclusive selection of leather jackets</h6>
+                            <!-- <div class="landing-btn">
                                 <a href="">DISCOVER</a>
                                 <a href="">SHOP NOW</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -322,10 +332,10 @@
                     <div class="footer-social">
                         <div class="location mt-5 mb-3">
                             <img src="./images/location.png" alt="">
-                            <span class="ms-2">Comilla, Bangladesh 3500</span>
+                            <span class="ms-2">Kolkata, West Bengal</span>
                         </div>
                         <div class="email">
-                            <span>kawsarahmed0210@gmail.com</span>
+                            <span>concinnity.wear@gmail.com</span>
                             <p class="mt-2">01647470457</p>
                         </div>
                         <div class="social-icon">
@@ -407,7 +417,7 @@
         </div>
     </section>
     <section id="copyright-footer">
-        <p class="m-0">Copyright © 2022 . Dress Up All rights reserved</p>
+        <p class="m-0">Copyright © 2022. Concinnity All rights reserved</p>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
