Added Meta tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dress Up - Fashion</title>
+    <meta name="robots" content="all">
+    <meta name="description"
+        content="Shop our collection of stylish and high-quality leather jackets for men and women. Find the perfect fit and design to suit your taste and style. Fast and free shipping on all orders.">
+    <meta name="keywords" content="Leather jackets, Men's leather jackets, Women's leather jackets, Real leather jackets, Faux leather jackets, Biker jackets, Motorcycle jackets, Bomber jackets, Aviator jackets, Trench coats Fashion leather jackets, Classic leather jackets, Vintage leather jackets, Designer leather jackets, Custom leather jackets, Plus size leather jackets, Petite leather jackets, Made to measure leather jackets, Leather jacket care, Leather jacket repair">
+    <meta name="author" content="Concinnity Wear">
+    <title>Customized Leather Jackets for Men and Women - Concinnity Wear</title>
 
     <!-- FAVICON -->
     <link rel="icon" href="./images/favicon.ico">
@@ -41,12 +46,15 @@
 </head>
 
 <body>
-
+    <div id="whatsapp">
+        <a href="https://wa.me/+917506556586" target="_blank">
+          <img src="images/whatsapp-logo.png" alt="WhatsApp Me"></a>
+      </div>
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid nav-alignment">
                 <a class="navbar-brand navbar-brand-img-full" href="#">
-                    <img src="./images/DU-FULL.png" alt="">
+                    <img src="./images/DU-FULL.png" alt="Concinnity">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -119,13 +127,16 @@
         </nav>
     </section>
     <section id="landing-section">
+        <div class="whatsapp">
+
+        </div>
         <div class="landing-bg">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12 landing-text">
                         <div data-aos="fade-left">
                             <h6>NEW TRENDS</h6>
-                            <h1>Comming<br/> Soon</h1>
+                            <h1>Comming<br /> Soon</h1>
                             <h6>An exclusive selection of leather jackets</h6>
                             <!-- <div class="landing-btn">
                                 <a href="">DISCOVER</a>
@@ -143,15 +154,15 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-12 p-1 pt-0">
-                            <img src="./images/second-img-1.png" alt="">
+                            <img src="./images/second-img-1.png" alt="Leather Jackets">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 p-1 pb-0">
-                            <img src="./images/3.png" alt="">
+                            <img src="./images/3.png" alt="Leather Jackets">
                         </div>
                         <div class="col-md-6 p-1 pb-0">
-                            <img src="./images/second-img-3.png" alt="">
+                            <img src="./images/second-img-3.png" alt="Leather Jackets">
                         </div>
                     </div>
                 </div>
@@ -159,7 +170,7 @@
                     <div class="category-name">
                         <div class="dark-filter">
                         </div>
-                        <img style="width:100% ;" src="./images/5.png" alt="">
+                        <img style="width:100% ;" src="./images/5.png" alt="Leather Jackets">
                         <a class="cat-btn" href="">CATAGORY NAME</a>
                     </div>
                 </div>
@@ -176,7 +187,7 @@
                 <div class="col-md-12">
                     <div class="cards-wrapper">
                         <div class="card">
-                            <img src="./images/women-1.png" alt="">
+                            <img src="./images/women-1.png" alt="Womens Leather Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -187,7 +198,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/women-2.png" alt="">
+                            <img src="./images/women-2.png" alt="Womens Leather Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -198,7 +209,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/women-3.png" alt="">
+                            <img src="./images/women-3.png" alt="Womens Leather Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -209,7 +220,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/women-4.png" alt="">
+                            <img src="./images/women-4.png" alt="Womens Leather Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -235,7 +246,7 @@
                 <div class="col-md-12">
                     <div class="cards-wrapper">
                         <div class="card">
-                            <img src="./images/men-1.png" alt="">
+                            <img src="./images/men-1.png" alt="Mens Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -246,7 +257,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/men-2.png" alt="">
+                            <img src="./images/men-2.png" alt="Mens Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -257,7 +268,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/men-3.png" alt="">
+                            <img src="./images/men-3.png" alt="Mens Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -268,7 +279,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./images/men-4.png" alt="">
+                            <img src="./images/men-4.png" alt="Mens Jackets">
                             <div class="card-details">
                                 <p>IGURE</p>
                                 <h6>GREEN MUSCLE FIT POLO SHIRT</h6>
@@ -292,11 +303,11 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <img class="avone-img-1" src="./images/avone-img-1.png" alt="">
+                    <img class="avone-img-1" src="./images/avone-img-1.png" alt="Leather Jackets">
                 </div>
                 <div class="col-md-6" style="position:relative;">
-                    <img class="avone-img-2" src="./images/avone-img-2.png" alt="">
-                    <img class="avone-img-3" src="./images/women-1.png" alt="">
+                    <img class="avone-img-2" src="./images/avone-img-2.png" alt="Leather Jackets">
+                    <img class="avone-img-3" src="./images/women-1.png" alt="Leather Jackets">
                     <div class="avone-btn">
                         <a href="">SHOW WOMEN’S DRESS</a>
                     </div>
@@ -324,14 +335,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="footer-text">
-                        <img src="./images/DU-FULL.png" alt="">
+                        <img src="./images/DU-FULL.png" alt="Footer Logo">
                         <p class="mt-3 mb-3">We earned a reputation of being good at what we do.<br>Let us take your
                             online shop to new dimension in
                             success!</p>
                     </div>
                     <div class="footer-social">
                         <div class="location mt-5 mb-3">
-                            <img src="./images/location.png" alt="">
+                            <img src="./images/location.png" alt="Location">
                             <span class="ms-2">Kolkata, West Bengal</span>
                         </div>
                         <div class="email">
